<resources>
    <string name="app_name">MD_GBProject</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tdby">TDBY</string>
    <string name="title" translatable="false">title</string>
    <string name="annotation" translatable="false">annotation</string>
    <string name="first_screen">first screen</string>
    <string name="second_screen">second screen</string>
    <string name="favourites">Favourites</string>
    <string name="settings">settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="search_wikipedia">Search Wikipedia</string>
    <string name="grey_blue_theme">Blue Grey Theme</string>
    <string name="teal_theme">Teal Theme</string>
    <string name="magenta_theme">Magenta Theme</string>
    <string name="themes">Themes</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="title_app_apod">Picture of the Day</string>
    <string name="subtitle_app_apod">Discover the cosmos!</string>
    <string name="description_app_apod">Each day a different image or photograph of our fascinating universe is featured, along with a brief explanation written by a professional astronomer.</string>
    <string name="title_poss">Picture of Solar System</string>
    <string name="subtitle_poss">Explore Solar System</string>
    <string name="title_pom">Picture of Mars</string>
    <string name="subtitle_pom">Explore Mars</string>
    <string name="title_poe">Picture of Earth</string>
    <string name="subtitle_poe">Explore Earth</string>
    <string name="layouts">Layouts</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="coordinatorlayout">CoordinatorLayout</string>
    <string name="motionlayout">MotionLayout</string>
    <string name="large_text">Here’s what the Encyclopedia Galactica has to say about alcohol. It says that alcohol is a colourless volatile liquid formed by the fermentation of sugars and also notes its intoxicating effect on certain carbon-based life forms.\n
The Hitchhiker’s Guide to the Galaxy also mentions alcohol. It says that the best drink in existence is the Pan Galactic Gargle Blaster.\n
It says that the effect of a Pan Galactic Gargle Blaster is like having your brains smashed out by a slice of lemon wrapped round a large gold brick.\n
The Guide also tells you on which planets the best Pan Galactic Gargle Blasters are mixed, how much you can expect to pay for one and what voluntary organizations exist to help you rehabilitate afterwards.\n
The Guide even tells you how you can mix one yourself.\n\n
Take the juice from one bottle of that Ol’ Janx Spirit, it says.\n\n
Pour into it one measure of water from the seas of Santraginus V—Oh that Santraginean sea water, it says. Oh those Santraginean fish!!!\n
Allow three cubes of Arcturan Mega-gin to melt into the mixture (it must be properly iced or the benzine is lost).\n
Allow four litres of Fallian marsh gas to bubble through it, in memory of all those happy Hikers who have died of pleasure in the Marshes of Fallia.\n
Over the back of a silver spoon float a measure of Qualactin Hypermint extract, redolent of all the heady odours of the dark Qualactin Zones, subtle sweet and mystic.\n
Drop in the tooth of an Algolian Suntiger. Watch it dissolve, spreading the fires of the Algolian Suns deep into the heart of the drink.\n
Sprinkle Zamphuor.\n
Add an olive.\n
Drink… but… very carefully…\n
The Hitchhiker’s Guide to the Galaxy sells rather better than the Encyclopedia Galactica.\n
On this particular Thursday, something was moving quietly through the ionosphere many miles above the surface of the planet; several somethings in fact, several dozen huge yellow chunky slablike somethings, huge as office buildings, silent as birds.\n
They soared with ease, basking in electromagnetic rays from the star Sol, biding their time, grouping, preparing.\n
The planet beneath them was almost perfectly oblivious of their presence, which was just how they wanted it for the moment.\n
The huge yellow somethings went unnoticed at Goonhilly, they passed over Cape Canaveral without a blip, Woomera and Jodrell Bank looked straight through them—which was a pity because it was exactly the sort of thing they’d been looking for all these years.\n
The only place they registered at all was on a small black device called a Sub-Etha Sens-O-Matic which winked away quietly to itself. It nestled in the darkness inside a leather satchel which Ford Prefect wore habitually round his neck.\n
The contents of Ford Prefect’s satchel were quite interesting in fact and would have made any Earth physicist’s eyes pop out of his head, which is why he always concealed them by keeping a couple of dog-eared scripts for plays he pretended he was auditioning for stuffed in the top. Besides the Sub-Etha Sens-O-Matic and the scripts he had an Electronic Thumb—a short squat black rod, smooth and matt with a couple of flat switches and dials at one end; he also had a device which looked rather like a largish electronic calculator.\n
This had about a hundred tiny flat press buttons and a screen about four inches square on which any one of a million “pages” could be summoned at a moment’s notice. It looked insanely complicated, and this was one of the reasons why the snug plastic cover it fitted into had the words Don’t Panic printed on it in large friendly letters.\n
The other reason was that this device was in fact that most remarkable of all books ever to come out of the great publishing corporations of Ursa Minor—The Hitchhiker’s Guide to the Galaxy. \n
The reason why it was published in the form of a micro sub meson electronic component is that if it were printed in normal book form, an interstellar hitch hiker would require several inconveniently large buildings to carry it around in.\n\n\n</string>
    <string name="animation">Animation</string>
    <string name="animate">Animate</string>
    <string name="transition">Transition</string>
    <string name="explode">Explode</string>
    <string name="push">PUSH</string>
    <string name="photo_transition">Photo Transition</string>
    <string name="object_animator">Object Animator</string>
    <string name="archive">Archive</string>
    <string name="send">Send</string>
    <string name="recycle">Recycle</string>
    <string name="supporting_text">Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, being larger than only Mercury. In English, Mars carries the name of the Roman god of war. Mars is a terrestrial planet with a thin atmosphere, and has a crust primarily composed of elements similar to Earth\'s crust, as well as a core made of iron and nickel.
        Mars has surface features such as impact craters, valleys, dunes, and polar ice caps. It also has two small and irregularly shaped moons, Phobos and Deimos.</string>
</resources>